# cirkit_waypoint_manager

./: .gitignore  .launchtest.travis.yml  .travis.yml  CMakeLists.txt  README.md  before_script.sh  cirkit_waypoint_manager.rosinstall  dependencies.rosinstall  package.xml  waypoint_manager.rosinstall
cirkit_waypoint_generator/: CMakeLists.txt  README.md  package.xml
cirkit_waypoint_generator/src/: cirkit_waypoint_generator.cpp  cirkit_waypoint_saver.cpp  cirkit_waypoint_server.cpp
cirkit_waypoint_manager/: CMakeLists.txt  package.xml
cirkit_waypoint_navigator/: .launchtest.CMakeLists.txt  .launchtest.package.xml  CMakeLists.txt  README.md  package.xml
cirkit_waypoint_navigator/include/: ros_colored_msg.h
cirkit_waypoint_navigator/launch/: waypoint_navigator.launch  waypoint_navigator_gazebo.launch
cirkit_waypoint_navigator/src/: cirkit_waypoint_navigator.cpp
cirkit_waypoint_navigator/test/: waypoint_navigator_gazebo.test.xml
cirkit_waypoint_navigator/waypoints/: 2016-10-18-22-09-13.csv  2016-10-19-17-15-18.csv  2016-10-19-18-53-49.csv  2016-10-19-21-50-50.csv  2016-10-19-21-55-40.csv  2016-10-19-22-46-24.csv  2016-10-19-22-58-10.csv  2016-10-19-23-00-05.csv  2016-11-01-18-58-06.csv  2016-11-04-12-04-52.csv  2016-11-04-12-29-09.csv  2016-11-05-03-19-32-with_search_area.csv  2016-11-05-03-19-32.csv  2016-11-05-11-11-54.csv  2016-11-06-06-03-13.csv  2016-11-06-11-32-09.csv  2017-01-25-18-35-19.csv  2017-01-25-19-40-40.csv  2017-01-25-19-50-44.csv  2017-01-25-20-56-54.csv  2017-01-25-21-27-21.csv  2017-01-25-22-56-16.csv  2017-01-25-23-36-39.csv  2017-01-25-23-55-59.csv  2017-01-26-00-16-09.csv  2017-01-26-12-49-10.csv  2017-01-26-12-57-24.csv  2017-01-26-13-15-09.csv  2017-03-09-13-07-33.csv  2017-03-09-14-14-55.csv  2017-03-09-14-35-37.csv  garden_waypoints.csv  tukutyare2016-fixed.csv
cirkit_waypoint_navigator/waypoints/ekiden_final/first/: 2017-04-15-05-34-02.csv  2017-04-15-06-55-26.csv  2017-04-15-07-22-13.csv  2017-04-15-10-41-04.csv
cirkit_waypoint_navigator/waypoints/ekiden_final/second/: 2017-04-15-05-51-29.csv  2017-04-15-09-23-12.csv  2017-04-15-10-46-36.csv
msg/: Waypoint.msg
src/: ros_waypoint_generator.cpp  ros_waypoint_saver.cpp  ros_waypoint_server.cpp
waypoint_generator/: CMakeLists.txt  README.md  package.xml
waypoint_generator/src/: ros_waypoint_generator.cpp  ros_waypoint_saver.cpp  ros_waypoint_server.cpp  waypoint_generator.cpp  waypoint_saver.cpp  waypoint_server.cpp
waypoint_manager/: CMakeLists.txt  package.xml
waypoint_navigator/: CMakeLists.txt  package.xml
waypoint_navigator/include/: ros_colored_msg.h
waypoint_navigator/launch/: waypoint_navigator.launch  waypoint_navigator_gazebo.launch
waypoint_navigator/src/: waypoint_navigator.cpp
waypoint_navigator/test/: waypoint_navigator.test.xml  waypoint_navigator_gazebo.test.xml
waypoint_navigator/waypoints/: 201510240538.csv  2016-10-20-12-47-54-with-search-area.csv  2016-10-20-12-47-54.csv  2016-11-01-04-01-48.csv  2016-11-04-11-14-43.csv  2016-11-04-11-17-51.csv  2016-11-05-03-10-22.csv  2016-11-05-13-59-51.csv  2016-11-06-11-24-17.csv  gazebo_waypoints.csv  park2.csv  tobata2016-with-search-area-2m.csv
