<?xml version="1.0"?>
<package format="2">
  <name>cirkit_waypoint_generator</name>
  <version>0.1.0</version>
  <description>The waypoint_generator package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Ariyu</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/CIR-KIT/cirkit_waypoint_manager.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT/cirkit_waypoint_manager/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cirkit_waypoint_manager_msgs</build_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
</package>
