<?xml version="1.0"?>
<package format="2">
  <name>waypoint_generator</name>
  <version>0.0.0</version>
  <description>The waypoint_generator package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Ariyu</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/CIR-KIT/waypoint_manager/tree/master/waypoint_generator</url>
  <!-- TODO:write this <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>  
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <export>
  </export>
</package>
