<?xml version="1.0"?>
<package format="2">
  <name>waypoint_navigator</name>
  <version>0.1.0</version>
  <description>The waypoint_navigator package</description>

  <maintainer email="yuta@todo.todo">yuta</maintainer>
  <license>TODO</license> <!-- FIXME: add LICENSE -->

  <!-- <url type="website">http://wiki.ros.org/waypoint_navigator</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>tf</depend>
  <depend>roslib</depend>
  <depend>laser_geometry</depend>
  <depend>genmsg</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <export>
  </export>
</package>
